--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "animate.css": "^3.7.2",
     "nuxt": "^2.0.0",
     "v-mask": "^2.1.0"
   },
