--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate && cd functions/enviaEmail && yarn"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
