--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mascarashospitalares",
-  "version": "1..0",
+  "version": "0.5.0",
   "description": "Hot site para venda de materiais hospitalares",
   "author": "SergioOak.dev",
   "private": true,
