--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxtjs/strapi": "^0.1.5",
     "animate.css": "^3.7.2",
     "marked": "^1.1.0",
     "node-fetch": "^2.6.0",
-    "nuxt": "2.13.0",
+    "nuxt": "^2.14.3",
     "v-mask": "^2.1.0",
     "vue": "^2.6.11"
   },
